Mon Mar 30 01:00:20 2009  James Edward Gray II  <jeg2@ruby-lang.org>

	* test/csv/test_interface.rb: Trying a fix for some failing tests
	  on Windows.

Sun Mar 29 08:59:26 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/pathname.rb (Pathname#relative_path_from): compares path
	  components according to system default case-sensitiveness.
	  [ruby-core:22829]

Sat Mar 28 11:10:32 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (ruby.imp): all symbols in static library need to be
	  exported, so that encoding-extensions can be loaded.  based on a
	  patch from Yutaka Kanemoto <kinpoco AT gmail.com> a
	  [ruby-talk:332282].

Sat Mar 28 08:49:47 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* sprintf.c (rb_str_format): checks if named argument given twice.

	* sprintf.c (GETNAMEARG): remembers named arg is used, to get rid
	  of too many arguments warning.

Sat Mar 28 03:16:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (link_command, cc_command, cpp_command): should no
	  override extout defined in extmk.rb.

Fri Mar 27 12:56:44 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/mkmf.rb (what_type?): checks more restrictively, and
	  supports universal binary.

Fri Mar 27 01:33:37 2009  Tanaka Akira  <akr@fsij.org>

	* time.c (time_cmp): negate the result of reverse comparison.

Fri Mar 27 01:19:50 2009  Tanaka Akira  <akr@fsij.org>

	* bignum.c (rb_cmpint): FIX2INT may fail on LP64 platforms.

Thu Mar 26 12:22:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/yaml/rubytypes.rb (String#is_binary_data?): TAB would be
	  usually considered to be included in text data.

	* lib/rdoc/parser.rb (RDoc::Parser.binary?): blksize may be nil
	  and is irrelevant to whether a file is binary.  copied from
	  above since TAB and newlines would be usually considered to be
	  included in text data.

Thu Mar 26 11:33:13 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/rdoc/ri/paths.rb (RDoc::RI::Paths): considers