@@ -1,3 +1,8 @@
+Mon Mar 30 12:12:46 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* vm_eval.c (eval_string_with_cref): replaces the message if
+	  frozen.  [ruby-dev:38208]
+
 Mon Mar 30 01:00:20 2009  James Edward Gray II  <jeg2@ruby-lang.org>
 
 	* test/csv/test_interface.rb: Trying a fix for some failing tests
